fix aligning

--- a/src/Styles/upload.css
+++ b/src/Styles/upload.css
@@ -1,10 +1,8 @@
 .uploadButtonDiv {
-    display: flex;
-    flex-direction: column;
+    float: left;
     color: white;
 }
 
 .uploadButtonDiv>button {
-    width: 15%;
     padding: 2px;
 }
